--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:   
     - export DEPLOYPATH=/home/piccardo/demo.piccardopropiedades.com/
-    - /bin/cp propiedades.php $DEPLOYPATH
+    - /bin/rsync -av * $DEPLOYPATH
